[project]
name = "uiengineer"
version = "0.0.1"
description = "AI Rendered UI"
authors = [{ name = "Shroominic", email = "contact@shroominic.com" }]
dependencies = [
    "funcchain>=0.3.1",
    "fastui[fastapi]>=0.5.2",
    "langchain-groq>=0.1.2",
    "uvicorn>=0.29.0",
    "azure-functions>=1.19.0",
]
readme = "README.md"
requires-python = ">= 3.12"
license = { text = "MIT" }

[project.scripts]
uiengineer = "uiengineer.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["mypy>=1.8.0", "ruff>=0.2.2"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["uiengineer"]
